--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,35 @@
 # - postgres: INTERNAL only
 
 services:
-  statistics-api:
-    build:
-      context: ./services/statistics-api
-      dockerfile: Dockerfile
-    container_name: statistics-api
-    ports:
-      - "8080:3000"  # Published to host
+  device-registration-api:
+    image: gmedeirosnet/device-registration-api:latest
+    build: ./services/device-registration-api
     environment:
-      - NODE_ENV=production
-      - STATISTICS_API_PORT=3000
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_DB=devicesdb
       - POSTGRES_USER=appuser
       - POSTGRES_PASSWORD=apppassword123
+      - DEVICE_REGISTRATION_API_PORT=3001
+    networks:
+      - internal
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+
+  statistics-api:
+    image: gmedeirosnet/statistics-api:latest
+    build: ./services/statistics-api
+    ports:
+      - "8080:3000"
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=devicesdb
+      - POSTGRES_USER=appuser
+      - POSTGRES_PASSWORD=apppassword123
+      - STATISTICS_API_PORT=3000
       - DEVICE_REGISTRATION_API_URL=http://device-registration-api:3001
     networks:
       - public
@@ -30,41 +44,7 @@ services:
       postgres:
         condition: service_healthy
       device-registration-api:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000/health"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
-    restart: unless-stopped
-
-  device-registration-api:
-    build:
-      context: ./services/device-registration-api
-      dockerfile: Dockerfile
-    container_name: device-registration-api
-    expose:
-      - "3001"
-    environment:
-      - NODE_ENV=production
-      - DEVICE_REGISTRATION_API_PORT=3001
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_DB=devicesdb
-      - POSTGRES_USER=appuser
-      - POSTGRES_PASSWORD=apppassword123
-    networks:
-      - internal
-    depends_on:
-      postgres:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3001/health"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+        condition: service_started
     restart: unless-stopped
 
   postgres:
