Migrate to ES modules and update import/export syntax across device and statistics APIs

--- a/services/device-registration-api/package.json
+++ b/services/device-registration-api/package.json
@@ -2,6 +2,7 @@
   "name": "device-registration-api",
   "version": "1.0.0",
   "description": "Internal API for registering device types - J. Safra DevSecOps Task",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
